Remove CM9 Fm radio and add patched stock FM radio, Update bootrec - merge from https://github.com/CyanogenMod/android_device_sony_montblanc-common/commit/bade0612587056bf261e7a89f9d01ab6f505b5b1

--- a/lotus/makefile
+++ b/lotus/makefile
@@ -9,7 +9,7 @@ local-zip-file     := stockrom.zip
 local-out-zip-file := MIUI_`date '+%d.%b.%Y-%H.%M.%S'`_lotus.zip
 
 # All apps from original ZIP, but has smali files chanded
-local-modified-apps := MediaProvider FmRadioReceiver
+local-modified-apps := MediaProvider
 
 local-modified-jars := 
 
