--- a/KERNELS/pepper/ramdisk/init.st-ericsson.rc
+++ b/KERNELS/pepper/ramdisk/init.st-ericsson.rc
@@ -527,3 +527,9 @@ service batcap /system/bin/batcap
     user root
     oneshot
 
+on property:dhcp.wlan0.result=ok
+    exec /system/bin/iw phy phy0 wowlan enable any
+
+on property:init.svc.hostapd_bin=stopped
+    exec /system/bin/iw dev mon.wlan0 del
+
