--- a/KERNELS/pepper/ramdisk/init.st-ericsson.rc
+++ b/KERNELS/pepper/ramdisk/init.st-ericsson.rc
@@ -400,11 +400,18 @@ service iprenew_bnep0 /system/bin/dhcpcd -n
     disabled
     oneshot
 
+service dhcpcd_fix rm /data/misc/dhcp/*
+    user root
+    disabled
+    oneshot
+
 on property:init.svc.wpa_supplicant=stopped
     stop dhcpcd
+    start dhcpcd_fix
 
 on property:init.svc.dhcpcd=stopped
     stop dhcpcd
+    start dhcpcd_fix
 
 # STE, C&N service daemon
 service cn_server /system/bin/cn_server
