--- a/KERNELS/golfu/ramdisk/ueventd.golfu.rc
+++ b/KERNELS/golfu/ramdisk/ueventd.golfu.rc
@@ -22,3 +22,4 @@
 /dev/ttySA0                                    0600    system  system
 /dev/smd9                                      0600    system  system
 /dev/msm_camera/*                              0660    system  camera
+/dev/rfkill                                    0660    root    wifi
