--- a/KERNELS/golfu/ramdisk/init.golfu.rc
+++ b/KERNELS/golfu/ramdisk/init.golfu.rc
@@ -135,9 +135,10 @@ on boot
     mount yaffs2 mtd@system /system ro remount
 
 # wifi ++
-service wpa_supplicant /system/bin/logwrapper /system/bin/wpa_supplicant -Dnl80211 -iwlan0 -c/data/misc/wifi/wpa_supplicant.conf
+service wpa_supplicant /system/bin/logwrapper /system/bin/wpa_supplicant -Dnl80211 -iwlan0 -c/data/misc/wifi/wpa_supplicant.conf -dd
     class late_start
-    socket wpa_wlan0 dgram 660 wifi wifi
+    user root
+    group wifi inet
     disabled
     oneshot
 
